# libxalculate

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  qalc.cc
libqalculate/: BuiltinFunctions-algebra.cc  BuiltinFunctions-calculus.cc  BuiltinFunctions-combinatorics.cc  BuiltinFunctions-datetime.cc  BuiltinFunctions-explog.cc  BuiltinFunctions-logical.cc  BuiltinFunctions-matrixvector.cc  BuiltinFunctions-number.cc  BuiltinFunctions-special.cc  BuiltinFunctions-statistics.cc  BuiltinFunctions-trigonometry.cc  BuiltinFunctions-util.cc  BuiltinFunctions.h  Calculator-calculate.cc  Calculator-convert.cc  Calculator-definitions.cc  Calculator-parse.cc  Calculator-plot.cc  Calculator.cc  Calculator.h  Calculator_p.h  DataSet.cc  DataSet.h  ExpressionItem.cc  ExpressionItem.h  Function.cc  Function.h  MathStructure-calculate.cc  MathStructure-convert.cc  MathStructure-decompose.cc  MathStructure-differentiate.cc  MathStructure-eval.cc  MathStructure-factor.cc  MathStructure-gcd.cc  MathStructure-integrate.cc  MathStructure-isolatex.cc  MathStructure-limit.cc  MathStructure-matrixvector.cc  MathStructure-polynomial.cc  MathStructure-print.cc  (+21 more)
locale/ca/LC_MESSAGES/: qalculate-gtk.mo
locale/de/LC_MESSAGES/: libqalculate.mo  qalculate-gtk.mo
locale/es/LC_MESSAGES/: libqalculate.mo  qalculate-gtk.mo
locale/fr/LC_MESSAGES/: qalculate-gtk.mo
locale/ka/LC_MESSAGES/: libqalculate.mo
locale/nl/LC_MESSAGES/: qalculate-gtk.mo
locale/pt_BR/LC_MESSAGES/: qalculate-gtk.mo
locale/ru/LC_MESSAGES/: libqalculate.mo  qalculate-gtk.mo
locale/sl/LC_MESSAGES/: qalculate-gtk.mo
locale/sv/LC_MESSAGES/: libqalculate.mo  qalculate-gtk.mo
locale/zh_CN/LC_MESSAGES/: qalculate-gtk.mo
